k8s-src.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-005
spec:
  selector:
    matchLabels:
      app: nginx-container-005
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-container-005
    spec:
      volumes:
        - name: nginx-volume-bind
          persistentVolumeClaim:
            claimName: nginx-volume-claim
        - name: foo
          configMap:
            name: game-demo
      containers:
      - name: nginx
        image: 288milan/jenkins-pipe-demo
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "250Mi"
          limits:
            memory: "250Mi"
        volumeMounts:
        #- name: nginx-volume-bind
        #  mountPath: /home
        - name: foo
          mountPath: "/home"
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-005
  labels:
    app: nginx
spec:
  ports:
  - port: 30005
    targetPort: 8080
  selector:
    app: nginx-container-005
  type: LoadBalancer
