dep-004.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-004
spec:
  selector:
    matchLabels:
      app: nginx-container-004
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-container-004
    spec:
      volumes:
        - name: nginx-volume-bind
          persistentVolumeClaim:
            claimName: nginx-volume-claim
        - name: foo
          configMap:
            name: game-demo
      containers:
      - name: nginx
        image: 288milan/jenkins-pipe-demo
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "250Mi"
          limits:
            memory: "250Mi"
        volumeMounts:
        #- name: nginx-volume-bind
        #  mountPath: /home
        - name: foo
          mountPath: "/home"
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-004
  labels:
    app: nginx
spec:
  ports:
  - port: 8080
  selector:
    app: nginx-container-004
    
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginxtest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-004
            port:
              number: 8080
  ingressClassName: nginx
