ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingres-test-pipe
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginxtest5.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: nginx-service-005
            port: 
              number: 8080
